Update update method